# amountslicer-server-core

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py  requirements.txt
src/data_structure/: graph.py  utils.py
src/element_type/: ifc_type_enum.py
src/ifc_utils/: ifc_file_utils.py  ifc_geometry_utils.py  ifc_type_enum.py
src/model/: model_elements.py  model_elements_simple.py  model_geometry.py
src/server_utils/: method_loggers.py
